Fix for logo display issue on iPhone X

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -80,7 +80,7 @@ section {
     height: 60px;
     margin-left: auto;
     margin-right: auto;
-
+    max-width: 90vw;
 }
 .navbar__navigation {
     display: none;
